--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
+    "chart.js": "^4.0.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-chartjs": "^5.0.1",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
@@ -23,7 +26,8 @@
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vuetify-loader": "^1.7.0",
+    "webpack": "^4.0.0"
   },
   "eslintConfig": {
     "root": true,
